// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  dynamicTypeRamp="body"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components BodyMonospace Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Medium"
  dynamicTypeRamp="body"
  font="DMMono"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "DM Mono",
        "fontStyle": "normal",
        "fontWeight": "500",
      },
    ]
  }
  weight="Medium"
>
  Text
</Text>
`;

exports[`Test Typography Components CTA Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="white"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="largeTitle"
  maxFontSizeMultiplier={1.25}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 31,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 43,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="largeTitle"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 31,
      "lineHeight": 43,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 31,
        "lineHeight": 43,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="title1"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 28,
      "lineHeight": 40,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 28,
        "lineHeight": 40,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title2"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="bluegreyLight"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title2"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title2"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title2"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title2"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  allowFontScaling={false}
  color="bluegreyLight"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  dynamicTypeRamp="title3"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="subheadline"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="subheadline"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="subheadline"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="subheadline"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H6 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Semibold"
  dynamicTypeRamp="headline"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 25,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 25,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#C02927",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="Semibold"
  dynamicTypeRamp="footnote"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
      "textDecorationLine": "underline",
    }
  }
  maxFontSizeMultiplier={1.25}
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
        "textDecorationLine": "underline",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;
